--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="google-site-verification" content="6EDMRW9Y61kolWzhI5N4TlK7nScOelVc62EoDMrfFxY" />
         <meta name="title" MDFConsulting - Expert advise in Biotechnology>
 
-        <title>Home Page - MDFConsulting - Expert in Biotechnology </title>
+        <title>MDFConsulting - Expert in Biotechnology </title>
 
         <link rel="stylesheet" href="mystyle.css">
 
@@ -29,10 +29,10 @@
                     <ul class="nav-menu-desktop">
                         <li><a href="expertises.html" class="nav-link">Expertises</a>
                             <ul>
-                                <li><a href="expertises.html#viralvaccins">- Viral Vaccines</a></li>
-                                <li><a href="expertises.html#gentherapy">- Gen Therapy</a></li>
-                                <li><a href="expertises.html#therapeuticproteins">- Therapeutic proteins</a></li>
-                                <li><a href="expertises.html#biosimilars">- Enzymes & Biosimilars</a></li>
+                                <li><a href="expertises#viralvaccins">- Viral Vaccines</a></li>
+                                <li><a href="expertises#gentherapy">- Gen Therapy</a></li>
+                                <li><a href="expertises#therapeuticproteins">- Therapeutic proteins</a></li>
+                                <li><a href="expertises#biosimilars">- Enzymes & Biosimilars</a></li>
                             </ul>
                         </li>
                         <li><a href="services.html" class="nav-link">Services</a>
@@ -56,10 +56,10 @@
                         <div id="nav-submenu-mobile1" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Expertises
                                 <ul id="nav-submenu-list-mobile1" class="nav-submenu-list-mobile">
-                                    <li><a href="expertises.html#viralvaccins">- Viral Vaccines</a></li>
-                                    <li><a href="expertises.html#gentherapy">- Gen Therapy</a></li>
-                                    <li><a href="expertises.html#therapeuticproteins">- Therapeutic proteins</a></li>
-                                    <li><a href="expertises.html#biosimilars">- Enzymes & Biosimilars</a></li>
+                                    <li><a href="expertises#viralvaccins">- Viral Vaccines</a></li>
+                                    <li><a href="expertises#gentherapy">- Gen Therapy</a></li>
+                                    <li><a href="expertises#therapeuticproteins">- Therapeutic proteins</a></li>
+                                    <li><a href="expertises#biosimilars">- Enzymes & Biosimilars</a></li>
                                 </ul>
                             </li>
                         </div>
