--- a/services.html
+++ b/services.html
@@ -25,23 +25,23 @@
   
                 <nav class="header-nav">
                     <ul class="nav-menu-desktop">
-                        <li><a href="expertises" class="nav-link">Expertises</a>
+                        <li><a href="https://mdfconsulting.eu/expertises" class="nav-link">Expertises</a>
                             <ul>
-                                <li><a href="expertises#viralvaccins">- Viral Vaccines</a></li>
-                                <li><a href="expertises#gentherapy">- Gen Therapy</a></li>
-                                <li><a href="expertises#therapeuticproteins">- Therapeutic proteins</a></li>
-                                <li><a href="expertises#biosimilars">- Enzymes & Biosimilars</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#viralvaccins">- Viral Vaccines</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#gentherapy">- Gen Therapy</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#therapeuticproteins">- Therapeutic proteins</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#biosimilars">- Enzymes & Biosimilars</a></li>
                             </ul>
                         </li>
-                        <li><a href="services.html" class="nav-link">Services</a>
+                        <li><a href="https://mdfconsulting.eu/services.html" class="nav-link">Services</a>
                             <ul>
-                                <li><a href="services.html#projectbased">- Project Based</a></li>
-                                <li><a href="services.html#consultancy">- Consultancy</a></li>
-                                <li><a href="services.html#processoptimization">- Process Optimization</a></li>
-                                <li><a href="services.html#trainings">- Trainings</a></li>
+                                <li><a href="https://mdfconsulting.eu/services.html#projectbased">- Project Based</a></li>
+                                <li><a href="https://mdfconsulting.eu/services.html#consultancy">- Consultancy</a></li>
+                                <li><a href="https://mdfconsulting.eu/services.html#processoptimization">- Process Optimization</a></li>
+                                <li><a href="https://mdfconsulting.eu/services.html#trainings">- Trainings</a></li>
                             </ul>
                         </li>
-                        <li><a href="company.html" class="nav-link">Company</a></li>
+                        <li><a href="https://mdfconsulting.eu/company.html" class="nav-link">Company</a></li>
                         <li><a href="#" class="nav-link">Contact</a>
                             <ul>
                                 <li><a href="#">Linkedin</a></li>
@@ -54,27 +54,27 @@
                         <div id="nav-submenu-mobile1" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Expertises
                                 <ul id="nav-submenu-list-mobile1" class="nav-submenu-list-mobile">
-                                    <li><a href="expertises#viralvaccins">- Viral Vaccines</a></li>
-                                    <li><a href="expertises#gentherapy">- Gen Therapy</a></li>
-                                    <li><a href="expertises#therapeuticproteins">- Therapeutic proteins</a></li>
-                                    <li><a href="expertises#biosimilars">- Enzymes & Biosimilars</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#viralvaccins">- Viral Vaccines</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#gentherapy">- Gen Therapy</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#therapeuticproteins">- Therapeutic proteins</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#biosimilars">- Enzymes & Biosimilars</a></li>
                                 </ul>
                             </li>
                         </div>
                         <div id="nav-submenu-mobile2" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Services
                                 <ul id="nav-submenu-list-mobile2" class="nav-submenu-list-mobile">
-                                    <li><a href="services.html#projectbased">- Project Based</a></li>
-                                    <li><a href="services.html#consultancy">- Consultancy</a></li>
-                                    <li><a href="services.html#processoptimization">- Process Optimization</a></li>
-                                    <li><a href="services.html#trainings">- Trainings</a></li>
+                                    <li><a href="https://mdfconsulting.eu/services.html#projectbased">- Project Based</a></li>
+                                    <li><a href="https://mdfconsulting.eu/services.html#consultancy">- Consultancy</a></li>
+                                    <li><a href="https://mdfconsulting.eu/services.html#processoptimization">- Process Optimization</a></li>
+                                    <li><a href="https://mdfconsulting.eu/services.html#trainings">- Trainings</a></li>
                                 </ul>
                             </li>
                         </div>
                         <div id="nav-submenu-mobile3" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Company
                                 <ul id="nav-submenu-list-mobile3" class="nav-submenu-list-mobile">
-                                    <li><a href="company.html">- Placeholder</a></li>
+                                    <li><a href="https://mdfconsulting.eu/company.html">- Placeholder</a></li>
                                 </ul>
                             </li>
                         </div>
