--- a/index.html
+++ b/index.html
@@ -27,23 +27,28 @@
   
                 <nav class="header-nav">
                     <ul class="nav-menu-desktop">
+                        <li><a href="https://mdfconsulting.eu/aboutus" class="nav-link">About us</a></li>
                         <li><a href="https://mdfconsulting.eu/expertises" class="nav-link">Expertises</a>
                             <ul>
-                                <li><a href="https://mdfconsulting.eu/expertises#viralvaccins">- Viral Vaccines</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#viralvaccins">- Viral Vectors & Vaccines</a></li>
                                 <li><a href="https://mdfconsulting.eu/expertises#gentherapy">- Gen Therapy</a></li>
-                                <li><a href="https://mdfconsulting.eu/expertises#therapeuticproteins">- Therapeutic proteins</a></li>
-                                <li><a href="https://mdfconsulting.eu/expertises#biosimilars">- Enzymes & Biosimilars</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#therapeuticproteins">- Therapeutic proteins & Antibodies</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#biosimilars">- Biosimilars & Enzymes</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#bloodfactors">- Blood Factors</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#nanoparticles">- Nano Particles</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#medicaldevices">- Medical Devices</a></li>
                             </ul>
                         </li>
                         <li><a href="https://mdfconsulting.eu/services" class="nav-link">Services</a>
                             <ul>
                                 <li><a href="https://mdfconsulting.eu/services#projectbased">- Project Based</a></li>
-                                <li><a href="https://mdfconsulting.eu/services#consultancy">- Consultancy</a></li>
-                                <li><a href="https://mdfconsulting.eu/services#procesoptimization">- Project Optimization</a></li>
+                                <li><a href="https://mdfconsulting.eu/services#assays">- Assays</a></li>
+                                <li><a href="https://mdfconsulting.eu/services#processdesign">- Process Design</a></li>
+                                <li><a href="https://mdfconsulting.eu/services#batchproduction">- Support Batch Production</a></li>
                                 <li><a href="https://mdfconsulting.eu/services#trainings">- Trainings</a></li>
                             </ul>
                         </li>
-                        <li><a href="https://mdfconsulting.eu/company" class="nav-link">Company</a></li>
+                        <li><a href="https://mdfconsulting.eu/careers" class="nav-link">Careers</a></li>
                         <li><a href="#" class="nav-link">Contact</a>
                             <ul>
                                 <li><a href="#">Linkedin</a></li>
@@ -74,9 +79,9 @@
                             </li>
                         </div>
                         <div id="nav-submenu-mobile3" class="nav-submenu-mobile">
-                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Company
+                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Careers
                                 <ul id="nav-submenu-list-mobile3" class="nav-submenu-list-mobile">
-                                    <li><a href="https://mdfconsulting.eu/company">- Placeholder</a></li>
+                                    <li><a href="https://mdfconsulting.eu/careers">- Placeholder</a></li>
                                 </ul>
                             </li>
                         </div>
